# gdsc-github-actions-epita

./: README.md  pyproject.toml  workshop_instruction1.md
.github/workflows/: ci.yml
demo/: README.md  package.json
demo/.github/workflows/: workflow.yml
demo/WhispersModule/: Dockerfile  action.yml  entrypoint.sh
demo/src/: App.js  App.test.js
workshop/: README.md  tox.ini  workshop_instruction2.md
workshop/.github/workflows/: ci.yml  release.yml
workshop/src/example/: simple.py
workshop/tests/: test_simple.py
